2003-08-02  Martin Schaffner  <martin.schaffner@epfl.ch>

	* arch/linux/linuxnet.c, main/multi.c, main/multibot.c: bigendian
	networking fixes

	* cfile/cfile.c: revert to always using custom fgets

	* main/endlevel.c, main/mission.c: handle missing exit sequence
	components gracefully

	* main/playsave.c: comments

2003-07-24  Martin Schaffner  <martin.schaffner@epfl.ch>

	* cfile/cfile.c: update raw_position in cfwrite

	* main/network.c: comments/formatting

2003-06-22  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c: use standard fgets for non-archive files

	* main/movie.c: use con_printf for missing movie warning

2003-06-18  Bradley Bell  <btb@icculus.org>

	* main/movie.c: fixed cfile conversion of movielib code

	* main/console.c, main/hud.c: strip out colors, etc when printing
	to stdout

	* include/u_mem.h: fix NDEBUG calloc macro

2003-06-15  Bradley Bell  <btb@icculus.org>

	* include/fileutil.h, misc/Makefile.am, misc/fileutil.c: removed
	old fileutil stuff

	* 2d/pcx.c, include/strio.h, main/ai.c, main/ai.h,
	main/cntrlcen.c, main/config.c, main/gamesave.c, main/gameseq.c,
	main/movie.c, main/multi.c, main/network.c, main/newdemo.c,
	main/newmenu.c, main/piggy.c, main/playsave.c, main/polyobj.c,
	main/scores.c, main/state.c, main/text.c, misc/args.c,
	misc/strio.c: convert file i/o to cfile

2003-06-14  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, cfile/cfile.c: implemented cfile wrappers for
	writing and other modes besides "rb" (mostly taken from
	freespace2)

2003-06-09  Bradley Bell  <btb@icculus.org>

	* 2d/palette.c, main/kludge.c: gr_copy_palette not really a
	kludge, I think

	* include/libmve.h, libmve/mve_main.c, libmve/mvelib.c,
	libmve/mvelib.h, libmve/mveplay.c, main/movie.c: merged libmve
	from physfs branch

2003-06-07  Taylor Richards  <taylor@icculus.org>

	* libmve/mvelib.c, libmve/mveplay.c: stop memory leaks in libmve

2003-06-07  Bradley Bell  <btb@icculus.org>

	* main/console.c: fix non-console build
